...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Q3w-te-oLN" id="rDT-d2-kWn"/>
                            <outlet property="delegate" destination="Q3w-te-oLN" id="3Vt-Ei-wvz"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Weather Explorer" id="Vt6-MD-0pJ"/>
                    <connections>
                        <segue destination="0az-uJ-wGh" kind="show" identifier="detail" id="ub6-hE-sZk"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="pzt-ot-CvK" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
